prevent div to be squashed

--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -144,7 +144,8 @@
     position: relative;
 }
 .comment-box__profile-img {
-    width: 2.5rem;
+    min-width: 2.5rem;
+    max-width: 2.5rem;
     height: 2.5rem;
 
     padding: 0.2rem;
@@ -157,9 +158,8 @@
     overflow: hidden;
 }
 .comment-box__profile-img img {
-    display: block;
-    /* width: 100%; */
-    /* height: 100%; */
+    width: 100%;
+
     object-fit: cover;
 }
 
